# opscraft-microservices

./: .env.template  .gitignore  LICENSE  Makefile  Makefile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  generate-services.sh
services/: pyproject.toml
services/admin-service/: Dockerfile  README.md  config.py  main.py
services/admin-service/app/api/: routes.py
services/ai-service/: Dockerfile  main.py  requirements.txt
services/api-gateway/: Dockerfile  nginx.conf  proxy_params
services/approval-service/: Dockerfile  config.py  main.py  requirements.txt
services/approval-service/app/api/: routes.py
services/approval-service/app/core/: __init__.py  events.py  notifications.py
services/approval-service/app/db/: __init__.py  base.py
services/approval-service/app/models/: approval.py
services/approval-service/app/schemas/: approval.py
services/approval-service/app/services/: approval_service.py
services/audit-service/: .dockerignore  Dockerfile  config.py  main.py
services/audit-service/app/api/: routes.py
services/audit-service/app/core/: events.py
services/audit-service/app/db/: base.py
services/audit-service/app/models/: audit.py
services/audit-service/app/schemas/: audit.py
services/audit-service/app/services/: event_consumer.py
services/auth-service/: Dockerfile  README.md  config.py  main.py  requirements.txt
services/auth-service/app/: __init__.py  main.py
services/auth-service/app/api/: dependencies.py  routes.py
services/auth-service/app/core/: events.py  jwt.py  metrics.py  oauth.py  rbac.py  security.py  two_factor.py
services/auth-service/app/db/: base.py  session.py
services/auth-service/app/models/: user.py
services/auth-service/app/schemas/: user.py
services/auth-service/app/services/: auth_service.py  user_service.py
services/backup-service/: Dockerfile  config.py  main.py  requirements.txt
services/collaboration-service/: Dockerfile  main.py  requirements.txt
services/execution-service/: Dockerfile  README.md  config.py  main.py
services/execution-service/app/: main.py
services/execution-service/app/api/: routes.py
services/execution-service/app/core/: docker_client.py  events.py  executor.py
services/execution-service/app/db/: base.py  session.py
services/execution-service/app/executors/: cloud_executor.py
services/execution-service/app/models/: execution.py
services/execution-service/app/schemas/: execution.py
services/execution-service/app/services/: event_handler.py  execution_service.py  executor_strategies.py
services/execution-service/app/workers/: celery_worker.py
services/executor-service/: README.md
services/monitoring-service/app/: alerting.py  main.py
services/notification-service/: Dockerfile  config.py  main.py
services/notification-service/app/channels/: email.py  slack.py  teams.py
services/scheduler-service/: Dockerfile  config.py  main.py  requirements.txt
services/scheduler-service/app/: __init__.py
services/scheduler-service/app/api/: routes.py
services/scheduler-service/app/db/: base.py
services/scheduler-service/app/models/: __init__.py  dag.py  schedule.py
services/scheduler-service/app/schemas/: schedule.py
services/scheduler-service/app/services/: scheduler_service.py
services/script-service/: Dockerfile  README.md  config.py  main.py  requirements.txt
services/script-service/app/: main.py
services/script-service/app/api/: routes.py  templates.py
services/script-service/app/core/: events.py  metrics.py  validation.py
services/script-service/app/db/: base.py
services/script-service/app/models/: script.py  version.py
services/secret-service/: Dockerfile  README.md  config.py  main.py  requirements.txt
services/secret-service/app/db/: base.py
services/testing-service/: main.py
(+176 files in other folders)
